--- a/index.html
+++ b/index.html
@@ -1059,8 +1059,8 @@
     son medidas clave para proteger vidas.
   </p>
 </div>
-      <!-- 🚦 SECCIÓN DE PREVENCIÓN VIAL -->
-<section id="prevencion" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; padding: 50px; background-color: #f8f9fa; line-height: 1.7;">
+        <!-- 🚦 SECCIÓN DE PREVENCIÓN VIAL -->
+<section id="prevencion" class="section" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; padding: 50px; background-color: #f8f9fa; line-height: 1.7;">
   <h2 data-aos="zoom-in" style="text-align:center; color:#e63946; font-size:2em;">🚦 Prevención de Accidentes Viales</h2>
   <p data-aos="fade-up" style="text-align:justify; max-width:900px; margin:auto; margin-bottom:30px;">
     La prevención vial es una de las herramientas más importantes para reducir los accidentes de tránsito. Implica educación, responsabilidad y respeto por las normas, tanto de conductores como de peatones y autoridades. A continuación, se presentan estrategias y consejos prácticos para mejorar la seguridad vial en todos los niveles.
