--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
 
     /* --- Header y Navegación --- */
-    header {
+header {
   position: fixed;
   top: 0;
   left: 0;
@@ -30,11 +30,24 @@
   z-index: 1000;
   transition: top 0.4s ease-in-out;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(8px); /* opcional: da un efecto moderno */
 }
 
-/* Cuando se oculta */
+/* Ocultar cuando se baja */
 header.hide {
-  top: -170px; /* Ajusta según el alto del header */
+  top: -180px;
+}
+
+/* Ajuste para móviles */
+@media (max-width: 768px) {
+  header h1 {
+    font-size: 1.2rem;
+  }
+
+  header nav button {
+    padding: 6px 10px;
+    font-size: 0.8rem;
+  }
 }
 
 /* Estilo opcional para dar efecto flotante */
