--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ header.hide {
 @media (max-width: 768px) {
   header h1 {
     font-size: 1.2rem;
+    transform: translateY(-180%);
   }
 
   header nav button {
